# zlatnic

./: .codespellrc  .env.sample  .gitmodules  .pre-commit-config.yaml  .vscode  README.md  build.sh  manage.py  pyproject.toml  ruff.toml
manager/: admin.py  forms.py  models.py  urls.py  views.py  wallet_operations.py
manager/templatetags/: query_transform.py
templates/includes/: footer.html  header.html
templates/manager/: accountancy_form.html  card_form.html  cash_form.html  cryptocurrency_form.html  index.html  wallets.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  register.html
templates/users/: user_form.html
tests/: test_forms.py  test_models.py  test_views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
zlatnic/: settings.py  urls.py
