[project]
name = "zlatnic"
version = "0.1.0"
description = "Platform for personal finance management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.2",
    "django-phonenumber-field>=8.1.0",
    "django-storages>=1.14.6",
    "django-stubs>=5.2.0",
    "dropbox>=12.0.2",
    "phonenumbers>=9.0.6",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
